fix download button visibility (#29)

--- a/src/user-chrome/global/_icons.scss
+++ b/src/user-chrome/global/_icons.scss
@@ -274,9 +274,9 @@ menuitem[checked="true"] > .menu-iconic-left {
 }
 
 // download icon
-#downloads-button {
-  display: flex !important;
-}
+// #downloads-button {
+//   display: flex !important;
+// }
 #downloads-button,
 #downloads-indicator-anchor {
   list-style-image: get-var("download-icon") !important;
